# rust_lib

01.basic/01.greeting/src/: run.sh
01.basic/03.function/: fun.rs
01.basic/04.if_else/: if.rs
01.basic/05.loop/: for.rs
01.basic/07.slice/: str_slice.rs
01.basic/08.struct_tuple/: print_struct.rs  struct_function.rs  struct_method.rs  tuple.rs
01.basic/10.package_arch/: inner_field.rs  use_standard_lib.rs
01.basic/10.package_arch/second_module/: main.rs
01.basic/11.error_handling/: kind.rs  panic.rs
01.basic/12.template_trait/: trait.rs
01.basic/13.life_cycle/: life_cycle_comments.rs
01.basic/14.file_io/: arg1.rs  read_file.rs  read_file_part.rs  read_line.rs  text.txt  write_file.rs  write_file_stream.rs
01.basic/15.collection_string/: map.rs  map_update.rs  vector_append.rs  vector_get.rs
01.basic/17.thread/: closure_only.rs
01.greeting/: Cargo.toml
02.print/: main  main.rs
03.function/: fun
03.midware/01.DateTimeStamp/: time.rs
05.loop/: loop.rs  while.rs
06.ownership/: assign.rs  return.rs
07.slice/: array_slice.rs
09.enum/: match.rs  match_ebook.rs  option_none.rs  option_some.rs
10.package_arch/: use.rs
10.package_arch/second_module/: second_module.rs
11.error_handling/: error.rs  pass_error.rs
12.template_trait/: max_template_trait.rs
14.file_io/: arg2.rs  read_file_utf8.rs  text.txt  write_append.rs  write_cover.rs
15.collection_string/: string.rs  vector.rs
16.OO/: main.rs  second.rs
17.thread/: closures_lamda.rs  join.rs  move.rs  thread.rs
greeting/: run.sh
panic/: panic
print/: main
redo_fixer/: Cargo.toml
redo_fixer/src/: main.rs  sled_storage.rs
redo_fixer/src/common/raft/: Cargo.toml
sled-example/: Cargo.toml
workspace/greetings/: Cargo.toml
workspace/greetings/src/: main
(+27 files in other folders)
