[package]
name = "my-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
tokio = { version = "1", features = ["full"]}
serde = { version ="1", features = ["derive"]}
serde_json = "1.0.66"
