[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcgraph_log = {path = "../arcgraph_log"}
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"
log = { version = "0.4", features = ["std"] }
tikv-raft = { package = "raft", version = "0.6", features = ["protobuf-codec"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
sloggers = "2.1.1"
thiserror = "1.0"
tokio = { version = "1", default-features = false }
tonic = "0.6"
prost = "0.9"
protobuf = { version = "2.28", features = ["bytes"] }
dashmap = "5.4"
ahash = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
lazy_static = "1.4"
once_cell = "1.7.2"
sled = "0.34.7"
common_error = {path = "../error"}
data_type = {path = "../data_type"}
config = { path = "../config"}
arcgraph_kv = { package="kv", path = "../../store/kv"}
crossbeam-skiplist = "0.1"
arrayref = "0.3.7"
meta_api = { path = "../../meta/api"}
memory_engine = {path = "../../store/memory_engine"}
util = {path = "../util"}
store_jobs = { path = "../../store/jobs" }
job_manager = { path = "../../job_manager" }
task_executor = { path = "../task_executor"}


[build-dependencies]
tonic-build = "0.6"

